Fixed Accepentence text alignment

--- a/docroot/sites/akdn/themes/akdn/css/styles.css
+++ b/docroot/sites/akdn/themes/akdn/css/styles.css
@@ -21799,102 +21799,100 @@ html[dir='rtl'] .flex-nav-container ol.flex-control-nav {
   right: auto;
   left: 10px;
 }
-
 /* line 124, ../sass/_new-style.scss */
-img {
-  width: auto;
-}
-
-/* line 129, ../sass/_new-style.scss */
-.panel-display.panel-1col {
+html[dir='rtl'] .panel-display.panel-1col {
   overflow: hidden;
 }
-
-/* line 135, ../sass/_new-style.scss */
-.custom-subscribe .subs-left {
+/* line 130, ../sass/_new-style.scss */
+html[dir='rtl'] .custom-subscribe .subs-left {
   float: right;
   text-align: right;
 }
 @media all and (max-width: 767px) {
-  /* line 135, ../sass/_new-style.scss */
-  .custom-subscribe .subs-left {
+  /* line 130, ../sass/_new-style.scss */
+  html[dir='rtl'] .custom-subscribe .subs-left {
     padding: 0;
   }
 }
-/* line 144, ../sass/_new-style.scss */
-.custom-subscribe .subs-right {
+/* line 139, ../sass/_new-style.scss */
+html[dir='rtl'] .custom-subscribe .subs-right {
   float: right;
 }
-/* line 147, ../sass/_new-style.scss */
-.custom-subscribe .subs-right .mc-field-group {
+/* line 142, ../sass/_new-style.scss */
+html[dir='rtl'] .custom-subscribe .subs-right .mc-field-group {
   overflow: auto;
 }
-/* line 150, ../sass/_new-style.scss */
-.custom-subscribe .subs-right .mc-field-group label {
+/* line 145, ../sass/_new-style.scss */
+html[dir='rtl'] .custom-subscribe .subs-right .mc-field-group label {
   float: right;
   text-align: right;
+  height: auto !important;
 }
 @media all and (max-width: 767px) {
-  /* line 150, ../sass/_new-style.scss */
-  .custom-subscribe .subs-right .mc-field-group label {
+  /* line 145, ../sass/_new-style.scss */
+  html[dir='rtl'] .custom-subscribe .subs-right .mc-field-group label {
     float: none;
     width: 100% !important;
-    height: auto !important;
   }
 }
 @media all and (max-width: 767px) {
-  /* line 161, ../sass/_new-style.scss */
-  .custom-subscribe .subs-right .mc-field-group input, .custom-subscribe .subs-right .mc-field-group select {
+  /* line 156, ../sass/_new-style.scss */
+  html[dir='rtl'] .custom-subscribe .subs-right .mc-field-group input, html[dir='rtl'] .custom-subscribe .subs-right .mc-field-group select {
     width: 100% !important;
     margin: 0;
   }
 }
-/* line 170, ../sass/_new-style.scss */
-.custom-subscribe select {
+/* line 165, ../sass/_new-style.scss */
+html[dir='rtl'] .custom-subscribe select {
   padding-left: 10px !important;
   background-position: 1% center;
 }
-/* line 175, ../sass/_new-style.scss */
-.custom-subscribe .elements {
+/* line 170, ../sass/_new-style.scss */
+html[dir='rtl'] .custom-subscribe .elements {
   float: right !important;
   margin-right: 10px;
 }
+@media all and (max-width: 1078px) {
+  /* line 170, ../sass/_new-style.scss */
+  html[dir='rtl'] .custom-subscribe .elements {
+    margin-right: 0px;
+  }
+}
 @media all and (max-width: 767px) {
-  /* line 181, ../sass/_new-style.scss */
-  .custom-subscribe.subs-subscriptions .subs-right, .custom-subscribe.subs-acceptance .subs-right {
+  /* line 180, ../sass/_new-style.scss */
+  html[dir='rtl'] .custom-subscribe.subs-subscriptions .subs-right, html[dir='rtl'] .custom-subscribe.subs-acceptance .subs-right {
     padding: 0 !important;
     margin: 0 !important;
   }
 }
-/* line 189, ../sass/_new-style.scss */
-.custom-subscribe.subs-subscriptions .input-group li, .custom-subscribe.subs-acceptance .input-group li {
+/* line 188, ../sass/_new-style.scss */
+html[dir='rtl'] .custom-subscribe.subs-subscriptions .input-group li, html[dir='rtl'] .custom-subscribe.subs-acceptance .input-group li {
   overflow: auto;
 }
-/* line 192, ../sass/_new-style.scss */
-.custom-subscribe.subs-subscriptions .input-group li label, .custom-subscribe.subs-acceptance .input-group li label {
+/* line 191, ../sass/_new-style.scss */
+html[dir='rtl'] .custom-subscribe.subs-subscriptions .input-group li label, html[dir='rtl'] .custom-subscribe.subs-acceptance .input-group li label {
   float: right;
   text-align: right;
   margin: 0;
   width: auto !important;
 }
-/* line 199, ../sass/_new-style.scss */
-.custom-subscribe.subs-subscriptions .input-group li input, .custom-subscribe.subs-acceptance .input-group li input {
+/* line 198, ../sass/_new-style.scss */
+html[dir='rtl'] .custom-subscribe.subs-subscriptions .input-group li input, html[dir='rtl'] .custom-subscribe.subs-acceptance .input-group li input {
   float: right;
   width: auto !important;
   margin-top: 5px;
 }
-/* line 211, ../sass/_new-style.scss */
-.custom-subscribe.subs-acceptance .input-group li label {
+/* line 210, ../sass/_new-style.scss */
+html[dir='rtl'] .custom-subscribe.subs-acceptance .input-group li label {
   width: 89% !important;
 }
-
-/* line 220, ../sass/_new-style.scss */
-#mc_embed_signup_scroll .form-note {
+/* line 219, ../sass/_new-style.scss */
+html[dir='rtl'] #mc_embed_signup_scroll .form-note {
   float: right !important;
   text-align: right;
 }
-/* line 225, ../sass/_new-style.scss */
-#mc_embed_signup_scroll .subs_btn_wrap {
+/* line 224, ../sass/_new-style.scss */
+html[dir='rtl'] #mc_embed_signup_scroll .subs_btn_wrap {
   float: left !important;
 }
 
