--- a/docroot/sites/akdn/themes/akdn/sass/_new-style.scss
+++ b/docroot/sites/akdn/themes/akdn/sass/_new-style.scss
@@ -118,111 +118,111 @@ html[dir='rtl'] {
         right: auto;
         left: 10px;
     }
-}
 
-/// Subscribe form
-img {
-  width: auto;
-}
-
-.panel-display {
-  &.panel-1col {
-    overflow: hidden;
-  }
-}
-
-.custom-subscribe {
-  .subs-left {
-    float: right;
-    text-align: right;
-
-    @media all and (max-width: 767px) {
-      padding: 0;
+  /// Subscribe form
+  .panel-display {
+    &.panel-1col {
+      overflow: hidden;
     }
   }
 
-  .subs-right {
-    float: right;
+  .custom-subscribe {
+    .subs-left {
+      float: right;
+      text-align: right;
 
-    .mc-field-group {
-      overflow: auto;
-
-      label {
-        float: right;
-        text-align: right;
-
-        @media all and (max-width: 767px) {
-          float: none;
-          width: 100% !important;
-          height: auto !important;
-        }
-      }
-
-      input, select {
-        @media all and (max-width: 767px) {
-          width: 100% !important;
-          margin: 0;
-        }
-      }
-    }
-  }
-
-  select {
-    padding-left: 10px !important;
-    background-position: 1% center;
-  }
-
-  .elements {
-    float: right !important;
-    margin-right: 10px;
-  }
-
-  &.subs-subscriptions, &.subs-acceptance {
-    .subs-right {
       @media all and (max-width: 767px) {
-        padding: 0 !important;
-        margin: 0 !important;
+        padding: 0;
       }
     }
 
-    .input-group {
-      li {
+    .subs-right {
+      float: right;
+
+      .mc-field-group {
         overflow: auto;
 
         label {
           float: right;
           text-align: right;
-          margin: 0;
-          width: auto !important;
+          height: auto !important;
+
+          @media all and (max-width: 767px) {
+            float: none;
+            width: 100% !important;
+          }
         }
 
-        input {
-          float: right;
-          width: auto !important;
-          margin-top: 5px;
+        input, select {
+          @media all and (max-width: 767px) {
+            width: 100% !important;
+            margin: 0;
+          }
+        }
+      }
+    }
+
+    select {
+      padding-left: 10px !important;
+      background-position: 1% center;
+    }
+
+    .elements {
+      float: right !important;
+      margin-right: 10px;
+
+      @media all and (max-width: 1078px) {
+        margin-right: 0px;
+      }
+    }
+
+    &.subs-subscriptions, &.subs-acceptance {
+      .subs-right {
+        @media all and (max-width: 767px) {
+          padding: 0 !important;
+          margin: 0 !important;
+        }
+      }
+
+      .input-group {
+        li {
+          overflow: auto;
+
+          label {
+            float: right;
+            text-align: right;
+            margin: 0;
+            width: auto !important;
+          }
+
+          input {
+            float: right;
+            width: auto !important;
+            margin-top: 5px;
+          }
+        }
+      }
+    }
+
+    &.subs-acceptance {
+      .input-group {
+        li {
+          label {
+            width: 89% !important;
+          }
         }
       }
     }
   }
 
-  &.subs-acceptance {
-    .input-group {
-      li {
-        label {
-          width: 89% !important;
-        }
-      }
+  #mc_embed_signup_scroll {
+    .form-note {
+      float: right !important;
+      text-align: right;
     }
-  }
-}
 
-#mc_embed_signup_scroll {
-  .form-note {
-    float: right !important;
-    text-align: right;
-  }
-
-  .subs_btn_wrap {
-    float: left !important;
+    .subs_btn_wrap {
+      float: left !important;
+    }
   }
 }
